--- a/proyecto/MetaMethods.ipynb
+++ b/proyecto/MetaMethods.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -64,20 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Params fo Knn= {'n_neighbors': 3, 'weights': 'distance'} Accuracy= 0.5793898305084746\n",
-      "Accuracy: 0.645 [Naive Bayes]\n",
-      "Accuracy: 0.579 [Knn (3)]\n",
-      "Accuracy: 0.611 [Dec. Tree]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "#from sklearn.linear_model import LogisticRegression\n",
@@ -116,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.641 [Majority Voting]\n"
+      "Accuracy: 0.636 [Majority Voting]\n"
      ]
     }
    ],
@@ -145,14 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.634 [Weighted Voting]\n"
+      "Accuracy: 0.635 [Weighted Voting]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -387,6 +387,62 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimators: 1, Accuracy: 0.604, 95% CI: (0.592, 0.615)\n",
+      "Estimators: 2, Accuracy: 0.588, 95% CI: (0.577, 0.600)\n",
+      "Estimators: 5, Accuracy: 0.634, 95% CI: (0.623, 0.645)\n",
+      "Estimators: 10, Accuracy: 0.639, 95% CI: (0.628, 0.650)\n",
+      "Estimators: 20, Accuracy: 0.647, 95% CI: (0.636, 0.658)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, np.float64(0.6036610169491525), 0.592497602730206, 0.614824431168099),\n",
+       " (2, np.float64(0.5884745762711864), 0.5772432959607721, 0.5997058565816005),\n",
+       " (5, np.float64(0.6343050847457627), 0.6233131121743852, 0.6452970573171403),\n",
+       " (10, np.float64(0.6386440677966101), 0.6276801918165794, 0.6496079437766408),\n",
+       " (20, np.float64(0.6470508474576271), 0.6361441728721854, 0.6579575220430688)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reimportar librerías necesarias\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from statsmodels.stats.proportion import proportion_confint\n",
+    "\n",
+    "\n",
+    "# Configuración de los parámetros para Random Forest\n",
+    "cv = 5  # Número de pliegues\n",
+    "n_estimators_list = [1, 2, 5, 10, 20]\n",
+    "confidence_intervals = []\n",
+    "\n",
+    "# Cálculo del intervalo de confianza para cada número de estimadores\n",
+    "for nest in n_estimators_list:\n",
+    "    scores = cross_val_score(RandomForestClassifier(n_estimators=nest), X, y, cv=cv, scoring='accuracy')\n",
+    "    accuracy = scores.mean()\n",
+    "    ci_lower, ci_upper = proportion_confint(count=accuracy * len(y), nobs=len(y), alpha=0.05, method='normal')\n",
+    "    confidence_intervals.append((nest, accuracy, ci_lower, ci_upper))\n",
+    "    print(f\"Estimators: {nest}, Accuracy: {accuracy:.3f}, 95% CI: ({ci_lower:.3f}, {ci_upper:.3f})\")\n",
+    "\n",
+    "confidence_intervals\n"
+   ]
   }
  ],
  "metadata": {
@@ -405,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
